--- a/src/Pages/HomePage/style.css
+++ b/src/Pages/HomePage/style.css
@@ -1,19 +1,19 @@
-.Home {
+.HomePage {
   text-align: center;
 }
 
-.Home-logo {
+.HomePage-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .Home-logo {
-    animation: Home-logo-spin infinite 20s linear;
+  .HomePage-logo {
+    animation: HomePage-logo-spin infinite 20s linear;
   }
 }
 
-.Home-header {
+.HomePage-header {
   background-color: #282c34;
   min-height: 85vh;
   display: flex;
@@ -24,11 +24,11 @@
   color: white;
 }
 
-.Home-link {
+.HomePage-link {
   color: #61dafb;
 }
 
-@keyframes Home-logo-spin {
+@keyframes HomePage-logo-spin {
   from {
     transform: rotate(0deg);
   }
